categories and some design

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="container-fluid">
+<nav class="container">
     <ul>
         <li><a routerLink="/"><strong>🌱 Ecodiag</strong></a></li>
     </ul>
@@ -13,6 +13,6 @@
         </li>
     </ul>
 </nav>
-<main class="container-fluid">
+<main class="container">
     <router-outlet />
 </main>
