single category criterias

--- a/client/src/app/categories/list/list.template.html
+++ b/client/src/app/categories/list/list.template.html
@@ -5,6 +5,9 @@
         <article>
             <header>{{ category.icon }} {{ category.name }}</header>
             {{ category.description }}
+            <footer>
+                <a routerLink="/categorie/{{ category.id }}">Lien</a>
+            </footer>
         </article>
     }
 </div>
