--- a/client/src/app/categories/show/show.template.html
+++ b/client/src/app/categories/show/show.template.html
@@ -1,17 +1,31 @@
 <h1>{{  category.name }}</h1>
 <p>{{ category.description }}</p>
+
 @for (criteria of categoryCriteria; track $index) {
-    <details>
-        <summary role="button">{{ criteria.label }}</summary>
-        <article style="margin-top: .1rem;">
-            <strong>Objectifs</strong>
-            <blockquote [innerHTML]="criteria.purpose"></blockquote>
+    <article>
+        <header>
+            <mark>{{ category.id }}.{{ $index + 1  }}</mark> {{ criteria.label }}
+        </header>
 
-            <strong>Mise en œuvre</strong>
-            <blockquote [innerHTML]="criteria.implementation"></blockquote>
+        <criteria-status />
 
-            <strong>Moyen de test ou de contrôle</strong>
-            <blockquote [innerHTML]="criteria.testing"></blockquote>
-        </article>
-    </details>
+        <footer>
+            <details>
+                <summary class="pointer">
+                    <strong>🎯 Objectifs et mise en œuvre</strong>&nbsp;<small>(cliquez pour déplier)</small>
+                </summary>
+                <br/>
+                <strong>Objectifs</strong>
+                <blockquote [innerHTML]="criteria.purpose"></blockquote>
+
+                <strong>Mise en œuvre</strong>
+                <blockquote [innerHTML]="criteria.implementation"></blockquote>
+
+                <strong>Moyen de test ou de contrôle</strong>
+                <blockquote [innerHTML]="criteria.testing"></blockquote>
+
+                🔗 <a href="https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/critere/{{ category.id }}.{{ $index + 1 }}" target="_blank">Lien</a>
+            </details>
+        </footer>
+    </article>
 }
