--- a/client/src/client-assets/theme/_pico-nord.scss
+++ b/client/src/client-assets/theme/_pico-nord.scss
@@ -32,10 +32,10 @@
         'forms/input-search': false,
 
         // Components
-        'components/accordion': false,
+        'components/accordion': true,
         'components/card': true,
         'components/dropdown': true,
-        'components/group': false,
+        'components/group': true,
         'components/loading': false,
         'components/modal': false,
         'components/nav': true,
