criteria from db

--- a/client/src/app/categories/components/show/show.template.html
+++ b/client/src/app/categories/components/show/show.template.html
@@ -1,33 +1,35 @@
-<!--<h1>{{  category.name }}</h1>-->
-<!--<p>{{ category.description }}</p>-->
+@if (category$|async; as category) {
+    <h1>{{ category.icon }}{{ category.name }}</h1>
+    <p>{{ category.description }}</p>
 
-<!--<form [formGroup]="form" (ngSubmit)="onSubmit()">-->
-<!--    @for (criteria of categoryCriteria; track $index) {-->
-<!--        <article>-->
-<!--            <header>-->
-<!--                <mark>{{ category.id }}.{{ $index + 1  }}</mark> {{ criteria.label }}-->
-<!--            </header>-->
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        @for (criterion of category.criteria; track criterion.id) {
+            <article>
+                <header>
+                    <mark>{{ category.id }}.{{ criterion.id }}</mark> {{ criterion.label }}
+                </header>
 
-<!--            <criteria-status formControlName="criterias" [groupName]="generateName(category, $index)" (valueChange)="change($event)" />-->
+                <criteria-status formControlName="criterias" [criteria]="criterion" [groupName]="'criteria_' + criterion.id" (valueChange)="change($event)" />
 
-<!--            <footer>-->
-<!--                <details>-->
-<!--                    <summary class="pointer">-->
-<!--                        <strong>🎯 Objectifs et mise en œuvre</strong>&nbsp;<small>(cliquez pour déplier)</small>-->
-<!--                    </summary>-->
-<!--                    <br/>-->
-<!--                    <strong>Objectifs</strong>-->
-<!--                    <blockquote [innerHTML]="criteria.purpose"></blockquote>-->
+                <footer>
+                    <details>
+                        <summary class="pointer">
+                            <strong>🎯 Objectifs et mise en œuvre</strong>&nbsp;<small>(cliquez pour déplier)</small>
+                        </summary>
+                        <br/>
+                        <strong>Objectifs</strong>
+                        <blockquote [innerHTML]="criterion.purpose"></blockquote>
 
-<!--                    <strong>Mise en œuvre</strong>-->
-<!--                    <blockquote [innerHTML]="criteria.implementation"></blockquote>-->
+                        <strong>Mise en œuvre</strong>
+                        <blockquote [innerHTML]="criterion.implementation"></blockquote>
 
-<!--                    <strong>Moyen de test ou de contrôle</strong>-->
-<!--                    <blockquote [innerHTML]="criteria.testing"></blockquote>-->
+                        <strong>Moyen de test ou de contrôle</strong>
+                        <blockquote [innerHTML]="criterion.testing"></blockquote>
 
-<!--                    🔗 <a href="https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/critere/{{ category.id }}.{{ $index + 1 }}" target="_blank">Lien</a>-->
-<!--                </details>-->
-<!--            </footer>-->
-<!--        </article>-->
-<!--    }-->
-<!--</form>-->
+                        🔗 <a href="https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/critere/{{ category.id }}.{{ $index + 1 }}" target="_blank">Lien</a>
+                    </details>
+                </footer>
+            </article>
+        }
+    </form>
+}
