--- a/client/src/client-assets/theme/_pico-nord.scss
+++ b/client/src/client-assets/theme/_pico-nord.scss
@@ -39,7 +39,7 @@
         'components/loading': false,
         'components/modal': false,
         'components/nav': true,
-        'components/progress': false,
+        'components/progress': true,
         'components/tooltip': false,
 
         // Utilities
