--- a/client/src/client-assets/theme/_pico-nord.scss
+++ b/client/src/client-assets/theme/_pico-nord.scss
@@ -40,7 +40,7 @@
         'components/modal': false,
         'components/nav': true,
         'components/progress': true,
-        'components/tooltip': false,
+        'components/tooltip': true,
 
         // Utilities
         'utilities/accessibility': true,
