--- a/client/src/app/categories/components/list/list.template.html
+++ b/client/src/app/categories/components/list/list.template.html
@@ -14,10 +14,13 @@
 <div class="grid grid-2">
     @for (category of categories$|async; track category.id) {
         <article>
-            <header>{{ category.icon }} {{ category.name }} <mark data-tooltip="Progression">{{ category.progression|number: '1.0-0' }} %</mark></header>
-            {{ category.description }}
+            <header>{{ category.icon }} {{ category.name }} <mark data-tooltip="Score">{{ category.progression|number: '1.0-0' }} %</mark></header>
+            @if (0 < category.progression) {
+                <progress [value]="category.progression" max="100"></progress>
+            }
+            <p>{{ category.description }}</p>
             <footer>
-                <a routerLink="/categorie/{{ category.id }}">Compléter</a>
+                <a routerLink="/categorie/{{ category.id }}" role="button">Compléter</a>
             </footer>
         </article>
     }
