a bit of design

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="container">
     <ul>
-        <li><a routerLink="/"><strong>🌱 Ecodiag</strong></a></li>
+        <li><h1 class="mb-0"><a routerLink="/">🌱 Ecodiag</a></h1></li>
     </ul>
     <ul>
         <li><a routerLink="/styleguide">Styleguide</a></li>
