--- a/client/src/client-assets/theme/_pico-nord.scss
+++ b/client/src/client-assets/theme/_pico-nord.scss
@@ -36,7 +36,7 @@
         'components/card': true,
         'components/dropdown': true,
         'components/group': true,
-        'components/loading': false,
+        'components/loading': true,
         'components/modal': false,
         'components/nav': true,
         'components/progress': true,
