--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,6 +12,27 @@
         </li>
     </ul>
 </nav>
+
 <main class="container">
     <router-outlet />
 </main>
+
+<footer>
+    <div class="container">
+        <section>
+            <div class="grid grid-2">
+                <p>
+                    <span>🌱</span>
+                    Développé avec passion par <a href="https://bhalexx.fr" rel="noopener noreferrer" target="_blank">bhalexx</a> sur la base de l'<a href="https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/" target="_blank">édition 2024 du (RGESN)</a>.
+                </p>
+                <p>
+                    <span>🤖🌱</span>
+                    Évaluez le niveau de conformité d'écoconception de votre IA grâce à <a href="/" rel="noopener noreferrer">FrugalIA</a>.
+                </p>
+            </div>
+        </section>
+        <section>
+            <small>Ce site est hébergé chez <a href="https://www.infomaniak.com/fr/ecologie" target="_blank">Infomaniak</a>, un hébergeur engagé et fonctionnant entièrement aux énergies renouvelables.</small>
+        </section>
+    </div>
+</footer>
