--- a/client/src/client-assets/common.scss
+++ b/client/src/client-assets/common.scss
@@ -1,5 +1,6 @@
 @import './includes/nav';
 @import './includes/badges';
 @import './includes/helpers';
+@import './includes/footer';
 
 a { @extend .pointer; }
